# MLIR_practice

./: .gitignore  CMakeLists.txt  Dockerfile
code/: CMakeLists.txt  toyc.cpp
code/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
code/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
code/parser/: AST.cpp
examples/: example2.toy  example3.toy
include/toy/: Lexer.h  Parser.h
